// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressForm Filter fields should filter when postal code is from city 1`] = `
Array [
  "state",
  "neighborhood",
]
`;

exports[`AddressForm Filter fields should filter when postal code is from postal code 1`] = `
Array [
  "postalCode",
]
`;

exports[`AddressForm Filter fields should filter when postal code is from state 1`] = `
Array [
  "state",
]
`;

exports[`AddressForm should omit fields that are used in to get the postal code 1`] = `
<div>
  <div>
    <label>
      street
      <input
        name="street"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <div>
    <label>
      number
      <input
        name="number"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <div>
    <label>
      complement
      <input
        name="complement"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <div>
    <label>
      neighborhood
      <input
        name="neighborhood"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <div>
    <label>
      city
      <input
        name="city"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <div>
    <label>
      state
      <select
        name="state"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          UF
        </option>
        <option
          value="AC"
        >
          AC
        </option>
        <option
          value="AL"
        >
          AL
        </option>
        <option
          value="AM"
        >
          AM
        </option>
        <option
          value="AP"
        >
          AP
        </option>
        <option
          value="BA"
        >
          BA
        </option>
        <option
          value="CE"
        >
          CE
        </option>
        <option
          value="DF"
        >
          DF
        </option>
        <option
          value="ES"
        >
          ES
        </option>
        <option
          value="GO"
        >
          GO
        </option>
        <option
          value="MA"
        >
          MA
        </option>
        <option
          value="MT"
        >
          MT
        </option>
        <option
          value="MS"
        >
          MS
        </option>
        <option
          value="MG"
        >
          MG
        </option>
        <option
          value="PA"
        >
          PA
        </option>
        <option
          value="PB"
        >
          PB
        </option>
        <option
          value="PR"
        >
          PR
        </option>
        <option
          value="PE"
        >
          PE
        </option>
        <option
          value="PI"
        >
          PI
        </option>
        <option
          value="RJ"
        >
          RJ
        </option>
        <option
          value="RN"
        >
          RN
        </option>
        <option
          value="RO"
        >
          RO
        </option>
        <option
          value="RS"
        >
          RS
        </option>
        <option
          value="RR"
        >
          RR
        </option>
        <option
          value="SC"
        >
          SC
        </option>
        <option
          value="SE"
        >
          SE
        </option>
        <option
          value="SP"
        >
          SP
        </option>
        <option
          value="TO"
        >
          TO
        </option>
      </select>
    </label>
  </div>
</div>
`;
